--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
   "dependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.3.0",
     "autoprefixer": "^10.2.4",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.18",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "serve": "^11.3.2",
     "sirv": "^1.0.11"
