--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -22,6 +22,8 @@ spec:
               value: "https://bell-creek.jonesrussell42.xyz"
             - name: BLOG_URL
               value: "https://blog.jonesrussell42.xyz"
+            - name: MONGODB_URI
+              value: "mongodb://mongodb.jonesrussell42.xyz:27017/portfolio-app"
           ports:
             - containerPort: 5000
           readinessProbe:
