--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: jonesrussell/portfolio-app:latest
+          tags: jonesrussell/portfolio-app:v2.0.0
       #          build-args: |
       #            arg1=value1
       #            arg2=value2
