--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -15,7 +15,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
         - name: portfolio
-          image: jonesrussell/portfolio-app:latest
+          image: jonesrussell/portfolio-app:v2.0.0
           imagePullPolicy: "Always"
           env:
             - name: BELL_CREEK_URL
