--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
         - name: portfolio
-          image: jonesrussell/portfolio-app:v2.0.1
+          image: jonesrussell/portfolio-app:latest
           imagePullPolicy: "Always"
           env:
             - name: BELL_CREEK_URL
