--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.3",
     "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
