--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "sapper-google-analytics": "^1.0.2",
     "serve": "^11.3.2",
     "sirv": "^1.0.11"
   },
